# afforest

./: CMakeLists.txt
benchmark/: CMakeLists.txt
device/: cc.cu  cc.cuh  cc_no_main.cu
src/: benchmark.h  builder.h  graph.h  reader.h  writer.h
